# reg-compliance-env.

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  conftest.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  pytest_out.txt  requirements.txt  scraper.py  task_definitions.py  test_env.py  test_graders.py
data/: gdpr_articles.json  gdpr_static.json
data/sample_policies/: borderline_policy.txt  clean_policy.txt  violating_policy.txt
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py  utils.py
server/: app.py  environment.py
tasks/: __init__.py  task_config.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_environment.py  test_grader_guards.py  test_inference_logging.py  test_inference_policy.py
